[gd_scene load_steps=9 format=3 uid="uid://hv6fnp78mu8h"]

[ext_resource type="Script" path="res://1_Scripts/door_logic.gd" id="1_ov1nv"]
[ext_resource type="Texture2D" uid="uid://do5quwb17yfrg" path="res://2_Images/Tiles/door.png" id="2_vuvu3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0in1j"]
size = Vector2(128, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkpky"]
size = Vector2(214, 124)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_11k2k"]
polygon = PackedVector2Array(-64, -32, 64, -32, 64, 32, -64, 32)

[sub_resource type="Animation" id="Animation_oftm6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftSide:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightSide:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, -32)]
}

[sub_resource type="Animation" id="Animation_fdtgg"]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftSide:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-64, -32), Vector2(-71, -32), Vector2(-126, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightSide:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-64, -32), Vector2(-57, -32), Vector2(-2, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbf4r"]
_data = {
"RESET": SubResource("Animation_oftm6"),
"door_open": SubResource("Animation_fdtgg")
}

[node name="Door" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ov1nv")

[node name="LeftSide" type="Polygon2D" parent="."]
position = Vector2(-64, -32)
texture = ExtResource("2_vuvu3")
polygon = PackedVector2Array(0.031497, 64.0319, 63.9543, 64.0104, 63.982, 0.0110836, -0.00484371, 0.00997257)
uv = PackedVector2Array(0.031497, 64.0319, 63.9543, 64.0104, 63.982, 0.0110836, -0.00484371, 0.00997257)

[node name="RightSide" type="Polygon2D" parent="."]
position = Vector2(-64, -32)
texture = ExtResource("2_vuvu3")
polygon = PackedVector2Array(127.989, 64.1007, 128.015, 0.0096941, 63.9985, -0.0014987, 64.0073, 64.0055)
uv = PackedVector2Array(127.989, 64.1007, 128.015, 0.0096941, 63.9985, -0.0014987, 64.0073, 64.0055)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0in1j")

[node name="AreaOfInteraction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInteraction"]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_rkpky")
debug_color = Color(0, 0.647059, 0.176471, 0.0705882)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_11k2k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbf4r")
}

[connection signal="area_entered" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_entered"]
[connection signal="area_exited" from="AreaOfInteraction" to="." method="_on_area_of_interaction_area_exited"]
